<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/place_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jegyzet"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/tvNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/place_detail_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="20"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mentes"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btnRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utvonalterv"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>